[package]
name = "catacomb"
version = "1.0.0"
description = "A Wayland mobile compositor"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/catacomb"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[workspace]
members = ["catacomb_ipc"]

[features]
default = []
profiling = ["dep:profiling", "dep:puffin_http"]

[dependencies.smithay]
version = "0.6.0"
default-features = false
features = [
    "use_system_lib",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
]

[dependencies]
calloop = { version = "0.14.0", features = ["signals"] }
catacomb_ipc = { version = "0.1.0", path = "./catacomb_ipc", features = ["clap", "smithay"] }
clap = { version = "4.2.3", features = ["derive", "wrap_help"] }
dirs = "6.0.0"
indexmap = "2.5.0"
libc = "0.2.123"
profiling = { version = "1.0.14", optional = true, features = ["profile-with-puffin"] }
puffin_http = { version = "0.16.0", optional = true }
serde_json = "1.0.85"
serde = { version = "1.0.144", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
udev = "0.9.1"
