[package]
name = "catacomb"
version = "1.4.0"
description = "A Wayland mobile compositor"
authors = ["Christian Duerr <contact@christianduerr.com>"]
repository = "https://github.com/catacombing/catacomb"
rust-version = "1.88.0"
license = "GPL-3.0-only"
edition = "2024"

[workspace]
members = ["catacomb_ipc"]

[features]
default = ["iio-sensor-proxy"]
iio-sensor-proxy = ["dep:zbus", "dep:futures-lite"]
profiling = ["dep:profiling", "dep:puffin_http"]

[workspace.dependencies]
clap = "4.2.3"
dirs = "6.0.0"
regex = "1.8.1"
serde = "1.0.144"
serde_json = "1.0.85"
xkbcommon = "0.9.0"

[workspace.dependencies.smithay]
git = "https://github.com/smithay/smithay"
rev = "4a21f22ee96831376b5c4fef5bd1876433853963"
default-features = false

[dependencies]
calloop = { version = "0.14.0", features = ["signals"] }
catacomb_ipc = { version = "0.1.0", path = "./catacomb_ipc", features = ["clap", "smithay"] }
clap = { workspace = true, features = ["derive", "wrap_help"] }
dirs.workspace = true
futures-lite = { version = "2.6.1", optional = true }
indexmap = "2.5.0"
libc = "0.2.123"
profiling = { version = "1.0.14", optional = true, features = ["profile-with-puffin"] }
puffin_http = { version = "0.17.0", optional = true }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
udev = "0.9.1"
zbus = { version = "5.14.0", default-features = false, features = ["tokio"], optional = true }

[dependencies.catacomb_common]
git = "https://github.com/catacombing/catacomb_common"
rev = "512e9cadfbec50d60dc7f64415383526ff3e6a9f"

[dependencies.smithay]
workspace = true
features = [
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
    "wayland_frontend",
]
