[package]
name = "catacomb_ipc"
version = "0.1.0"
description = "Catacomb IPC interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
homepage = "https://github.com/chrisduerr/catacomb"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[dependencies.smithay]
git = "https://github.com/smithay/smithay"
default-features = false
features = [
    "use_system_lib",
    "backend_drm",
    "backend_gbm",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "renderer_gl",
]
optional = true

[dependencies]
clap = { version = "4.2.3", features = ["derive"], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
xkbcommon = "0.8.0"
dirs = "6.0.0"
regex = "1.8.1"

[features]
default = []
clap = ["dep:clap"]
smithay = ["dep:smithay"]
