[package]
name = "catacomb_ipc"
version = "0.1.0"
description = "Catacomb IPC interface"
authors = ["Christian Duerr <contact@christianduerr.com>"]
homepage = "https://github.com/chrisduerr/catacomb"
rust-version = "1.85.0"
license = "GPL-3.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
dirs.workspace = true
regex.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
smithay = { workspace = true, optional = true }
xkbcommon.workspace = true

[features]
default = []
clap = ["dep:clap"]
smithay = ["dep:smithay"]
